manifests/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ttm-as-a-service
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: ttm-as-a-service-webhook-receiver
